--- a/pkg/pfv/FlowEngine.hpp.in
+++ b/pkg/pfv/FlowEngine.hpp.in
@@ -60,6 +60,8 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		typedef typename FlowSolver::VertexHandle                    			VertexHandle;
 		typedef typename RTriangulation::Triangulation_data_structure::Cell::Info       CellInfo;
 		typedef typename RTriangulation::Triangulation_data_structure::Vertex::Info     VertexInfo;
+		typedef typename FlowSolver::AlphaShape											AlphaShape;
+		//typedef typename FlowSolver::Alpha_iterator										Alpha_iterator;
 		
 // 	protected:
 		shared_ptr<FlowSolver> solver;
@@ -389,6 +391,9 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		((double, cavityFluidDensity, 0,,">0 means cavity compressibility model considers density changes instead of volume changes."))
 		((double, thermalPorosity, 0,,">0 means the void volume space will be factored by thermalPorosity for pore internal energy considerations."))
 		((bool, averageCavityPressure, false,,"true means the pressure in the cavity will be averaged each iteration."))
+		((double, alphaBound,0,,"if not 0, use an alphaBoundary condition."))
+		((double, alphaBoundValue, 0,,"value of alpha constant pressure condition"))
+		((double,alphaFlowCond, 1,,"default flow boundary for alpha"))
 		,
 		/*deprec*/
 		((meanK_opt,clampKValues,"the name changed"))
