--- a/pkg/pfv/FlowEngine.hpp.in
+++ b/pkg/pfv/FlowEngine.hpp.in
@@ -73,6 +73,7 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		vector<posData> positionBufferParallel;//keep the positions from a given step for multithread factorization
 		//copy positions in a buffer for faster and/or parallel access
 		virtual void setPositionsBuffer(bool current);
+		virtual void addAlphaToPositionsBuffer(bool current);
 		virtual void trickPermeability(Solver* /*flow*/) {};
 
 	public :
@@ -179,6 +180,7 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 			return (solver->edgeIds.size());}
 		double getEquivalentCompressibility() {return (solver->equivalentCompressibility);}
 		double getCavityDensity() {return (solver->cavityFluidDensity);}
+		void printVertices() {solver->printVertices();}
 		Real OSI() {
 			return (solver->onlySpheresInteractions.size());}
 		int onlySpheresInteractions(unsigned int interaction) {
@@ -485,6 +487,7 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		.def("averageVelocity",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::averageVelocity,"measure the mean velocity in the period")
 		.def("setBoundaryNormal",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::setBoundaryNormal,"define the unit outward-pointing normal of a boundary (0<=index<=5).")
 		.def("isCellNeighbor",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::isCellNeighbor,(boost::python::arg("cell1_ID"), boost::python::arg("cell2_ID")),"check if cell1 and cell2 are neigbors.")
+		.def("printVertices",&TemplateFlowEngine_@TEMPLATE_FLOW_NAME@::printVertices,"Export vertex positions and types")
 		)
 };
 
@@ -540,7 +543,7 @@ class FlowCellInfo_@TEMPLATE_FLOW_NAME@ : public CGT::SimpleCellInfo {
 		sphericalVertexSurface.resize(4,0);
 		rayHydr.resize(4, 0);
 		invSumK=index=volumeSign=s=volumeVariation=pression=invVoidV=fict=temperature=tempVariation=Reynolds=NutimesFluidK=stabilityCoefficient=0;
-		isFictious=false; Pcondition = false; isGhost = false; Tcondition= false;
+		isFictious=false; Pcondition = false; isGhost = false; Tcondition= false; isAlpha=false;
 		isvisited = false; isCavity=false;
 		isGhost=false;
 		blocked=false;
