--- a/pkg/pfv/FlowEngine.hpp.in
+++ b/pkg/pfv/FlowEngine.hpp.in
@@ -393,8 +393,9 @@ class TemplateFlowEngine_@TEMPLATE_FLOW_NAME@ : public PartialEngine
 		((double, cavityFluidDensity, 0,,">0 means cavity compressibility model considers density changes instead of volume changes."))
 		((double, thermalPorosity, 0,,">0 means the void volume space will be factored by thermalPorosity for pore internal energy considerations."))
 		((bool, averageCavityPressure, false,,"true means the pressure in the cavity will be averaged each iteration."))
-		((double, alphaBound,0,,"if not 0, use an alphaBoundary condition. If 1, CGAL finds minimum alpha necessary for a single solid object. Any other value will be used for the alpha."))
+		((double, alphaBound,-1,,"if 0, use an alphaBoundary condition where CGAL finds minimum alpha necessary for a single solid object. Any positive value will be used for the alpha. All negative values deactivate the functionality."))
 		((double, alphaBoundValue, 0,,"value of alpha constant pressure condition"))
+		((bool, fixedAlpha, false,,"If true, a constant-sized alpha vertex will be placed exactly above each facet. If false, logic is used to improve cell sizes in concave regions."))
 		,
 		/*deprec*/
 		((meanK_opt,clampKValues,"the name changed"))
